--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "backend-api-vercel",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/01specter01/backend-api-vercel.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/01specter01/backend-api-vercel/issues"
-  },
-  "homepage": "https://github.com/01specter01/backend-api-vercel#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "backend-api-vercel",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/01specter01/backend-api-vercel.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/01specter01/backend-api-vercel/issues"
+    },
+    "homepage": "https://github.com/01specter01/backend-api-vercel#readme",
+    "dependencies": {
+        "express": "^4.18.2",
+        "nodemon": "^2.0.20"
+    }
 }
